@@ -23,42 +23,57 @@ public class AdminService {
     private final MajorRoleRequestRepository majorRoleRequestRepository;
     private final MemberProfileRepository memberProfileRepository;
 
-    // 1-1 전체 요청 목록
-    public List<MajorRoleRequest> getAllRequests() {
-        return majorRoleRequestRepository.findByApplicationStatusInOrderByCreatedAtDesc(
-                List.of(ApplicationStatus.PENDING, ApplicationStatus.RESUBMITTED, ApplicationStatus.ACCEPTED, ApplicationStatus.REJECTED, ApplicationStatus.REVOKED)
+    // [list 전체 검색 로직]
+    private List<MajorRoleRequest> searchOrFilter(List<ApplicationStatus> statuses, String searchType, String keyword) {
+        if (keyword != null && !keyword.isBlank()) {
+            if ("id".equals(searchType)) {
+                try {
+                    Long requestId = Long.parseLong(keyword);
+
+                    return majorRoleRequestRepository.findByRequestIdAndApplicationStatusIn(requestId, statuses);
+                } catch (NumberFormatException e) {
+                    return Collections.emptyList(); // 숫자가 아니면 빈 목록 반환
+                }
+            } else if ("name".equals(searchType)) {
+                return majorRoleRequestRepository.findByMemberProfile_NicknameContainingAndApplicationStatusInOrderByCreatedAtDesc(keyword, statuses);
+            }
+        }
+        // 검색어가 없으면 전체 목록 (최신순)
+        return majorRoleRequestRepository.findByApplicationStatusInOrderByCreatedAtDesc(statuses);
+    }
+
+    // 1-1. 전체 목록
+    public List<MajorRoleRequest> getAllRequests(String searchType, String keyword) {
+        return searchOrFilter(
+                List.of(ApplicationStatus.PENDING, ApplicationStatus.RESUBMITTED, ApplicationStatus.ACCEPTED, ApplicationStatus.REJECTED, ApplicationStatus.REVOKED),
+                searchType, keyword
         );
     }
 
-    // 1-2. 대기 중인 요청 목록
-    public List<MajorRoleRequest> getPendingRequests() {
-        return majorRoleRequestRepository.findByApplicationStatusInOrderByCreatedAtDesc(
-                List.of(ApplicationStatus.PENDING, ApplicationStatus.RESUBMITTED)
+    // 1-2. 대기 목록
+    public List<MajorRoleRequest> getPendingRequests(String searchType, String keyword) {
+        return searchOrFilter(
+                List.of(ApplicationStatus.PENDING, ApplicationStatus.RESUBMITTED),
+                searchType, keyword
         );
     }
 
-    // 1-3. 승인된 요청 목록
-    public List<MajorRoleRequest> getAcceptedRequests() {
-        return majorRoleRequestRepository.findByApplicationStatusInOrderByCreatedAtDesc(
-                Collections.singletonList(ApplicationStatus.ACCEPTED)
-        );
+    // 1-3. 승인된 목록
+    public List<MajorRoleRequest> getAcceptedRequests(String searchType, String keyword) {
+        return searchOrFilter(Collections.singletonList(ApplicationStatus.ACCEPTED), searchType, keyword);
     }
 
-    // 1-4. 반려된 요청 목록
-    public List<MajorRoleRequest> getRejectedRequests() {
-        return majorRoleRequestRepository.findByApplicationStatusInOrderByCreatedAtDesc(
-                Collections.singletonList(ApplicationStatus.REJECTED)
-        );
+    // 1-4. 반려된 목록
+    public List<MajorRoleRequest> getRejectedRequests(String searchType, String keyword) {
+        return searchOrFilter(Collections.singletonList(ApplicationStatus.REJECTED), searchType, keyword);
     }
 
-    // 1-5. 자격 박탈된 요청 목록
-    public List<MajorRoleRequest> getRevokedRequests() {
-        return majorRoleRequestRepository.findByApplicationStatusInOrderByCreatedAtDesc(
-                Collections.singletonList(ApplicationStatus.REVOKED)
-        );
+    // 1-5. 자격 박탈 목록
+    public List<MajorRoleRequest> getRevokedRequests(String searchType, String keyword) {
+        return searchOrFilter(Collections.singletonList(ApplicationStatus.REVOKED), searchType, keyword);
     }
 
-    @Transactional(readOnly = true)
+    // 1-6. 상세 조회 (수정했던 부분 유지)
     public MajorRoleRequest getRequestDetail(Long requestId) {
         MajorRoleRequest request = majorRoleRequestRepository.findById(requestId)
                 .orElseThrow(() -> new EntityNotFoundException("요청 정보를 찾을 수 없습니다."));
